permalinks and icon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,19 +6,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,500;0,700;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href={{ "assets/css/main.css" | relative_url }}>
+    <link rel="shortcut icon" type="image/x-icon" href="{{site.baseurl}}/assets/images/logo-11.png" />
     <title>John Jack Lewis</title>
 </head>
 <body>
     <div class="nav-bar" >
         <div class="nav-menu">
             <div id="logo">
-                <a href={{ "/index.html" | relative_url }}>
+                <a href={{ "/intro/" | relative_url }}>
                 <img src="{{site.baseurl}}/assets/images/logo-11.png" alt="John Jack Lewis"> 
                 </a>
             </div>
             <div id="right-nav">
                 <ul id="nav">
-                    <li><a href={{ "/blog.html" | relative_url }}>Blog</a></li>
+                    <li><a href={{ "/blog/" | relative_url }}>Blog</a></li>
                     <li><a href="https://github.com/jklewis99">Portfolio</a></li>
                     <li><a href="mailto:jklewis99@gmail.com">Contact</a></li>
                 </ul>
