--- a/_layouts/blogpost.html
+++ b/_layouts/blogpost.html
@@ -3,14 +3,23 @@ layout: default
 ---
 
 <div class="container" id="blog-container">
+    <div class="blog-post-header">
+        <h1>{{ page.title }}</h1>
+        <h2> {{ page.description }}</h2>
+        <h3 id="subject"><b>Subject</b>: {{ page.subject }}</h3>
+        <h3>{{ page.readtime }} min read</h3>
+        <h3>{{ page.date | date: '%B %d, %Y'}}</h3>
+    </div> 
     {{content}}
 </div>
 <section class="older-posts-section">
-    <h2>Other Posts</h2>
+    <h2>All Posts</h2>
     <ul class="older-posts-grid">
         {% for post in site.posts %} <!-- use offset to print only remaining posts (like python [1:]-->
         <li class="blogs">
-            <a class="blog-preview-title" href="{{ post.url }}">{{ post.title }}</a>
+            <div class="prevent-overflow">
+                <a class="blog-preview-title" href="{{ post.url }}">{{ post.title }}</a>
+            </div>
             <div class="prevent-overflow">
                 <p class="post__desc">
                     {{ post.description }}
