--- a/_layouts/blogroot.html
+++ b/_layouts/blogroot.html
@@ -19,7 +19,9 @@ layout: default
     <ul class="older-posts-grid">
         {% for post in site.posts limit:3 offset:1 %} <!-- use offset to print only remaining posts (like python [1:]-->
         <li class="blogs">
-            <a class="blog-preview-title" href="{{ post.url }}">{{ post.title }}</a>
+            <div class="prevent-overflow">
+                <a class="blog-preview-title" href="{{ post.url }}">{{ post.title }}</a>
+            </div>
             <div class="prevent-overflow">
                 <p class="post__desc">
                     {{ post.description }}
