--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -6,37 +6,16 @@ layout: default
     <link rel="stylesheet" href={{ "assets/css/cv.css" | relative_url }}>
     <link href={{ "assets/css/bootstrap.css" | relative_url}} rel="stylesheet">
 </head>
-<!--
-<section id="about" name="about"></section>
-<div class="about">
-    <div class="cv-container">
-        <div class="cv-row">
 
-            <div class="col-lg-2 col-lg-offset-1">
-                <h5>ABOUT</h5>
-            </div>
-            <div class="col-lg-6">
-                <p>Data Scientist motivated by opportunities to improve productivity with data-driven decision 
-                    making. Skills include machine learning, translating data into information, and problem solving.
-                    Looking for a Data Science role for a start-up willing to listen to its data to improve the business. </p>
-            </div>
-            <div class="col-lg-3">
-                <p><a href="{{site.baseurl}}/assets/downloadables/john-jack-lewis-resume.pdf" target="_blank">
-                    <i class="fas fa-file-pdf"></i>
-                        <sm>DOWNLOAD PDF</sm>
-                    </a></p>
-            </div>
-
-        </div>
-    </div>
-</div>-->
 <!--/ #intro -->
-<div id="pdf-download"> 
-    <p><a href="{{site.baseurl}}/assets/downloadables/john-jack-lewis-resume.pdf" target="_blank">
-        <i class="fas fa-file-pdf"></i>
+<div id="pdf-download">
+    <p>
+        <a href="{{site.baseurl}}/assets/downloadables/john-jack-lewis-resume.pdf" target="_blank">
+            <i class="fas fa-file-pdf"></i>
             <sm>DOWNLOAD PDF</sm>
-        </a></p>
-        <h1>John Jack Lewis</h1>
+        </a>
+    </p>
+    <h1>John Jack Lewis</h1>
 </div>
 
 <section id="resume" name="resume"></section>
@@ -53,8 +32,7 @@ layout: default
                 <!-- <h4 id="fsc">Florida Southern College</h4><t></t>
                 Honors Program <br/>
                 GPA: 4.0/4.0 <br/> -->
-                <t>Bachelor of Science in Computer Science: Machine Learning and A.I.</t><br />
-                Florida Southern College<br/>
+                <t>Bachelor of Science in Computer Science: Machine Learning and A.I.</t><br /> Florida Southern College<br/>
                 <!--<br/><i>Extra info here</i>-->
             </p>
         </div>
@@ -68,8 +46,7 @@ layout: default
         </div>
         <div class="col-lg-6 col-lg-offset-3">
             <p>
-            <t>Bachelor of Science in Applied Matchematics: Science and Engineering</t><br />
-            Florida Southern College
+                <t>Bachelor of Science in Applied Matchematics: Science and Engineering</t><br /> Florida Southern College
             </p>
         </div>
         <div class="col-lg-3">
@@ -112,58 +89,61 @@ layout: default
         <!-- EDIT: work line 1 -->
         <div class="col-lg-6">
             <p class="tight">
-                <t>REU in Consumer Networking Technologies </t><br />
-                University of Missouri <br />
+                <t>REU in Consumer Networking Technologies </t><br /> University of Missouri <br />
             </p>
             <p>
-                <more><ul class="bullets"><li>Designed and implemented novel multimodal deep learning network that achieved 65% accuracy in deepfake detection</li>
-                    <li>Drafted research paper and presented research at IEEE AIPR 2020: Trusted Computing, Privacy, and Securing Multimedia</li>
-                    <li>Processed 478 GB of videos from the Facebook Deepfake Detection Challenge using Python</li>
-                    </ul></more>
+                <more>
+                    <ul class="bullets">
+                        <li>Designed and implemented novel multimodal deep learning network that achieved 65% accuracy in deepfake detection</li>
+                        <li>Drafted research paper and presented research at IEEE AIPR 2020: Trusted Computing, Privacy, and Securing Multimedia</li>
+                        <li>Processed 478 GB of videos from the Facebook Deepfake Detection Challenge using Python</li>
+                    </ul>
+                </more>
             </p>
         </div>
         <div class="col-lg-3">
             <p>
-                <sm>May 2020 - July 2020 <br />
-                    (Remote) Columbia, MO</sm>
+                <sm>May 2020 - July 2020 <br /> (Remote) Columbia, MO</sm>
             </p>
         </div>
 
         <!-- EDIT: work line 2-->
         <div class="col-lg-6 col-lg-offset-3">
             <p class="tight">
-                <t>Programming Team</t><br />
-                Florida Southern College<br />
+                <t>Programming Team</t><br /> Florida Southern College<br />
             </p>
             <p>
-                <more><ul class="bullets"><li>Competed in the 2018 and 2019 ACM ICPC Southeast USA Regional Programming Contests; placed 2nd at competition site (2019)</li>
-                    <li>Compete against other college students to solve the most real-world programming problems using Java and Python</li>
-                    <li>Explain and optimize solutions through collaborative demonstration in weekly programming competitions</li>
-                    </ul></more>
+                <more>
+                    <ul class="bullets">
+                        <li>Competed in the 2018 and 2019 ACM ICPC Southeast USA Regional Programming Contests; placed 2nd at competition site (2019)</li>
+                        <li>Compete against other college students to solve the most real-world programming problems using Java and Python</li>
+                        <li>Explain and optimize solutions through collaborative demonstration in weekly programming competitions</li>
+                    </ul>
+                </more>
             </p>
         </div>
         <div class="col-lg-3">
             <p>
-                <sm>September 2018 - PRESENT<br />
-                    Lakeland, FL</sm>
+                <sm>September 2018 - PRESENT<br /> Lakeland, FL</sm>
             </p>
         </div>
         <!-- EDIT: work line 2-->
         <div class="col-lg-6 col-lg-offset-3">
             <p class="tight">
-                <t>Student Software Developer</t><br />
-                Florida Southern College<br />
+                <t>Student Software Developer</t><br /> Florida Southern College<br />
             </p>
             <p>
-                <more><ul class="bullets"><li>Developed a web-based application with Vue.js that utilized the Spotify API for location-based music sharing</li>
-                    <li>Followed Agile software development methodology</li>                   
-                    </ul></more>
+                <more>
+                    <ul class="bullets">
+                        <li>Developed a web-based application with Vue.js that utilized the Spotify API for location-based music sharing</li>
+                        <li>Followed Agile software development methodology</li>
+                    </ul>
+                </more>
             </p>
         </div>
         <div class="col-lg-3">
             <p>
-                <sm>January 2020 – May 2020<br />
-                    Lakeland, FL</sm>
+                <sm>January 2020 – May 2020<br /> Lakeland, FL</sm>
             </p>
         </div>
     </div>
@@ -183,14 +163,11 @@ layout: default
         <!-- EDIT: work line 1 -->
         <div class="col-lg-6">
             <p class="tight">
-                <t>Film Revenue Prediction</t><br />
-                LANGUAGE: <i>Python</i> <br />
-                TECHNOLOGIES: <i>Pandas, Scikit-learn, Jupyter Notebooks</i> <br />
+                <t>Film Revenue Prediction</t><br /> LANGUAGE: <i>Python</i> <br /> TECHNOLOGIES: <i>Pandas, Scikit-learn, Jupyter Notebooks</i> <br />
             </p>
             <p>
-                <more>Currently developing an end-to-end Data Science application for predicting revenue 
-                    for films from the 2010s. Current focus is on evaluating the correlation between trailer
-                     success and box office success. Data is generated using the TMDB API and the YouTube API.</more>
+                <more>Currently developing an end-to-end Data Science application for predicting revenue for films from the 2010s. Current focus is on evaluating the correlation between trailer success and box office success. Data is generated using the TMDB
+                    API and the YouTube API.</more>
             </p>
         </div>
         <div class="col-lg-3">
@@ -203,47 +180,39 @@ layout: default
 
         <div class="col-lg-6 col-lg-offset-3">
             <p class="tight">
-                <t>Traveling Salesperson: Pizza Pilgrimage</t><br />
-                LANGUAGE: <i>Java</i> <br />
+                <t>Traveling Salesperson: Pizza Pilgrimage</t><br /> LANGUAGE: <i>Java</i> <br />
             </p>
             <p>
-                <more>Implemented heuristic using 2-opt algorithm to solve a variation of the non-metric traveling
-                     salesperson problem</more>
+                <more>Implemented heuristic using 2-opt algorithm to solve a variation of the non-metric traveling salesperson problem</more>
             </p>
         </div>
 
         <!-- EDIT: work line 2-->
         <div class="col-lg-6 col-lg-offset-3">
             <p class="tight">
-                <t>Film Score Bracket Challenge</t><br />
-                LANGUAGES: <i>JavaScript, HTML, CSS</i> <br/>TECHNOLOGIES: <i>Vue, Firestore, Firebase, Git, GitHub</i><br />
+                <t>Film Score Bracket Challenge</t><br /> LANGUAGES: <i>JavaScript, HTML, CSS</i> <br/>TECHNOLOGIES: <i>Vue, Firestore, Firebase, Git, GitHub</i><br />
             </p>
             <p>
-                <more>Designed web-based application with Vue.js allowing users to submit predictions in a 
-                    tournament-style bracket challenge based on Instagram polls of film scores</more>
+                <more>Designed web-based application with Vue.js allowing users to submit predictions in a tournament-style bracket challenge based on Instagram polls of film scores</more>
             </p>
         </div>
 
         <!-- EDIT: work line 2-->
         <div class="col-lg-6 col-lg-offset-3">
             <p class="tight">
-                <t>Maze Generator and Solver</t><br />
-                LANGUAGE: <i>Python</i> <br />
+                <t>Maze Generator and Solver</t><br /> LANGUAGE: <i>Python</i> <br />
             </p>
             <p>
-                <more>Developed a program in Python to visualize differences of random maze generation procedures 
-                    using Prim’s and Kruskal’s algorithms and the differences between the maze solving strategies 
-                    of breadth first search, depth first search, and flood fill</more>
+                <more>Developed a program in Python to visualize differences of random maze generation procedures using Prim’s and Kruskal’s algorithms and the differences between the maze solving strategies of breadth first search, depth first search, and
+                    flood fill</more>
             </p>
         </div>
         <div class="col-lg-6 col-lg-offset-3">
             <p class="tight">
-                <t>Soundboard Keyboard</t><br />
-                LANGUAGE: <i>Python</i> <br />
+                <t>Soundboard Keyboard</t><br /> LANGUAGE: <i>Python</i> <br />
             </p>
             <p>
-                <more>Developed a program using Python that allows a user’s keyboard to function as a small piano
-                     or MIDI soundboard by mapping sounds to specific keys</more>
+                <more>Developed a program using Python that allows a user’s keyboard to function as a small piano or MIDI soundboard by mapping sounds to specific keys</more>
             </p>
         </div>
     </div>
@@ -261,8 +230,7 @@ layout: default
         <!-- EDIT: awards line 1-->
         <div class="col-lg-6">
             <p>
-                <t>Rising Scholar Award</t><br />
-                Florida Southern College<br />
+                <t>Florida Southern College: Rising Scholar Award</t><br />
             </p>
             <p>
                 <more>Award given to one outstanding freshman every year who has exemplified success in scholarship and school involvement</more>
@@ -277,10 +245,10 @@ layout: default
         <!-- EDIT: awards line 2-->
         <div class="col-lg-6 col-lg-offset-3">
             <p class="tight">
-                <t>Spirit of the Cornerstone Award</t><br />
-                Award given to one student of faculty member who most embodies the tenets of Florida Southern College Cornerstone, specifically creating a positive and enriching environment with respect and excellence of character.
+                <t>Florida Southern College: Spirit of the Cornerstone Award</t><br />
+                <more>Award given to one student or faculty member who most embodies the tenets of Florida Southern College Cornerstone, specifically creating a positive and enriching environment with respect and excellence of character.</more>
             </p>
-            
+
         </div>
         <div class="col-lg-3">
             <p>
@@ -308,14 +276,11 @@ layout: default
             <div class="col-lg-6">
                 <p>
                     <t>Email</t><br />
-                    <a href="mailto:jklewis99@gmail.com" target="_blank" class="mail">jlkewis99@gmail.com</a> <br />
+                    <a href="mailto:jklewis99@gmail.com" target="_blank" class="mail">jklewis99@gmail.com</a> <br />
                 </p>
                 <!-- EDIT: address -->
                 <p>
-                    <t>Address</t><br />
-                    21320 W 115th St. <br />
-                    Olathe, KS 66061 <br />
-                    United States of America<br />
+                    <t>Address</t><br /> 21320 W 115th St. <br /> Olathe, KS 66061 <br /> United States of America<br />
                 </p>
                 <!-- EDIT: phone number -->
                 <p>
@@ -323,12 +288,11 @@ layout: default
                     <a href="tel:9137105315" class="tel">(913) 710-5315</a> <br />
                 </p>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3" id="social-links">
                 <p>
                     <sm>SOCIAL LINKS</sm>
                 </p>
                 <p>
-                    <!-- EDIT: Social Links. Replace # with your URL for each -->
                     <a href="https://www.instagram.com/geneticdiabetic/"><i class="fab fa-instagram fa-lg"></i></i></a>
                     <a href="https://www.github.com/jklewis99/"><i class="fab fa-github fa-lg"></i></a>
                     <a href="https://www.linkedin.com/in/johnjacklewis/"><i class="fab fa-linkedin fa-lg"></i></a>
